Bug Fixes
Changing a role name doesn’t work
Prepend ‘status’ on validation detail page with ‘Status:’
Disable all validation fields until a name/title is provided
On load of a validation, post request is being sent to the server for steps
Error setting steps on new validation
Issue count not being updated
Issue detail not showing
Clicking on Issues count does not take you to the issue tab
No Login validation
Breadcrumbs not working when clicking on issue count

--- a/public/styles/less/adminconsole.less
+++ b/public/styles/less/adminconsole.less
@@ -31,4 +31,17 @@
       width: 30%;
     }
   }
+
+  .roles-list{
+    li{
+      &.active{
+        input{
+          color: @green !important;
+          border: 2px solid green;
+        }
+      }
+      height: 40px;
+      line-height: 40px;
+    }
+  }
 }
